isolated styles in a css file. Media query added. There's an issue of background image not showing.

--- a/Reserve/Reserve/Pages/LandingPage.cshtml.css
+++ b/Reserve/Reserve/Pages/LandingPage.cshtml.css
@@ -30,14 +30,3 @@
         margin: 10px auto;
     }
 }
-
-@media (max-width: 1000px) {
-    .main-content {
-        padding: 50px;
-    }
-
-    .btn-custom {
-        display: block;
-        margin: 10px auto;
-    }
-}
